[package]
name = "cute-dsp"
version = "0.0.32"
edition = "2021"
authors = ["CuteDSP Team", "LogicCuteGuy"]
description = "A Rust library for audio and signal processing"
license = "MIT"
repository = "https://github.com/CuteDSP/RSCuteDSP"
keywords = ["dsp", "audio", "signal-processing", "fft", "no-std"]
categories = ["multimedia::audio", "algorithms", "no-std"]

[lib]
name = "cute_dsp"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[features]
default = ["std"]
std = []
alloc = []
run-all-examples = []
wasm = ["wasm-bindgen", "getrandom"]

[dependencies]
num-complex = { version = "0.4"}
num-traits = { version = "0.2" }
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[dev-dependencies]
wasm-bindgen-cli = "0.2.108"
wasm-bindgen-test = "0.3.58"
getrandom = { version = "0.2", features = ["js"] }
sycamore = { version = "0.9.2", features = ["web"] }
sycamore-web = "0.9.2"
web-sys = { version = "0.3.85", features = [
  "AudioContext",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "AudioDestinationNode",
  "AudioNode",
  "AudioParam",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletProcessor",
  "GainNode",
  "ScriptProcessorNode",
  "AnalyserNode",
  "MediaStreamAudioSourceNode",
  "console",
] }
