[package]
name = "web_showcase"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sycamore = { version = "0.8", features = ["web"] }
sycamore-web = "0.8"
web-sys = { version = "0.3", features = [
  "AudioContext",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "AudioDestinationNode",
  "AudioNode",
  "AudioParam",
  "GainNode",
  "ScriptProcessorNode",
  "AnalyserNode",
  "console",
  "Window",
  "Document",
  "Element",
] }
console_error_panic_hook = "0.1"
cute-dsp = { path = "../", features = ["wasm"] }